--- a/data/config.yaml
+++ b/data/config.yaml
@@ -15,7 +15,7 @@ GitHubLink: https://github.com/meangpu/digital-garden/tree/hugo/content
 enableSemanticSearch: false
 operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
 description: A website that create to help me share my note in website format
-page_title: "🪴 Quartz 3.3"
+page_title: "meangpu website"
 links:
   - link_name: Twitter
     link: https://twitter.com/ninesupap
